--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <!-- Error messages-->
     <string name="detail_error_message">Sandwich data not available</string>
+    <string name="lable_today_s_sandwich">Today\'s Sandwich</string>
 
     <string-array name="sandwich_names">
         <item>Ham and cheese sandwich</item>
@@ -54,8 +55,7 @@
             beef\",\"Bacon\",\"Fried or hard-boiled eggs\",\"Ham\",\"Black or green
             olives\",\"Mozzarella\",\"Tomatoes\",\"Mayonnaise\"]}
         </item>
-        <item>{\"name\":{\"mainName\":\"Club sandwich\",\"alsoKnownAs\":[\"Clubhouse
-            sandwich\"]},\"placeOfOrigin\":\"United States\",\"description\":\"A club sandwich, also
+        <item>{\"name\":{\"mainName\":\"Club sandwich\",\"alsoKnownAs\":[\"Clubhouse_sandwich\"]},\"placeOfOrigin\":\"United States\",\"description\":\"A club sandwich, also
             called a clubhouse sandwich, is a sandwich of bread (occasionally toasted), sliced
             cooked poultry, fried bacon, lettuce, tomato, and mayonnaise. It is often cut into
             quarters or halves and held together by cocktail sticks. Modern versions frequently have
@@ -63,8 +63,7 @@
             bread.\",\"image\":\"https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Club_sandwich.png/800px-Club_sandwich.png\",\"ingredients\":[\"Toasted
             bread\",\"Turkey or chicken\",\"Bacon\",\"Lettuce\",\"Tomato\",\"Mayonnaise\"]}
         </item>
-        <item>{\"name\":{\"mainName\":\"Gua bao\",\"alsoKnownAs\":[\"Steamed bao\",\"Pork belly
-            bun\"]},\"placeOfOrigin\":\"Taiwan\",\"description\":\"Gua bao is a Taiwanese snack food
+        <item>{\"name\":{\"mainName\":\"Gua bao\",\"alsoKnownAs\":[\"Steamed_bao\",\"Pork_belly_bun\"]},\"placeOfOrigin\":\"Taiwan\",\"description\":\"Gua bao is a Taiwanese snack food
             consisting of a slice of stewed meat and other condiments sandwiched between flat
             steamed bread. The steamed bread is typically 6–8 centimetres (2.4–3.1 in) in size,
             semi-circular and flat in form, with a horizontal fold that, when opened, gives the
@@ -74,8 +73,7 @@
             peanuts.\",\"image\":\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Steamed_Sandwich%2Ctaken_by_LeoAlmighty.jpg/600px-Steamed_Sandwich%2Ctaken_by_LeoAlmighty.jpg\",\"ingredients\":[\"Steamed
             bread\",\"Stewed meat\",\"Condiments\"]}
         </item>
-        <item>{\"name\":{\"mainName\":\"Medianoche\",\"alsoKnownAs\":[\"Cuban
-            Sandwich\"]},\"placeOfOrigin\":\"Cuba\",\"description\":\"Medianoche (\\\"midnight\\\"
+        <item>{\"name\":{\"mainName\":\"Medianoche\",\"alsoKnownAs\":[\"Cuban_Sandwich\"]},\"placeOfOrigin\":\"Cuba\",\"description\":\"Medianoche (\\\"midnight\\\"
             in Spanish) is a type of sandwich which originated in Cuba. It is served in many Cuban
             communities in the United States. It is so named because of the sandwich\'s popularity
             asa staple served in Havana\'s night clubs right around or after
@@ -93,8 +91,7 @@
             Austria.\",\"image\":\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Pljeskavica_%286883073017%29.jpg/800px-Pljeskavica_%286883073017%29.jpg\",\"ingredients\":[\"Two
             or more of beef, lamb, pork, veal\",\"Onions\",\"Bread crumbs\",\"Lard\"]}
         </item>
-        <item>{\"name\":{\"mainName\":\"Roujiamo\",\"alsoKnownAs\":[\"Rougamo\",\"Rou jia
-            mo\"]},\"placeOfOrigin\":\"China\",\"description\":\"Roujiamo, meaning \\\"meat
+        <item>{\"name\":{\"mainName\":\"Roujiamo\",\"alsoKnownAs\":[\"Rougamo\",\"Rou_jia_mo\"]},\"placeOfOrigin\":\"China\",\"description\":\"Roujiamo, meaning \\\"meat
             burger\\\" or \\\"meat sandwich\\\", is a street food originating from the cuisine of
             Shaanxi Province and now widely consumed all over China. The meat is most commonly pork,
             stewed for hours in a soup containing over 20 spices and seasonings. Although it is
@@ -114,9 +111,7 @@
             meat (lamb, chicken, turkey, beef) or shawarma falafel\",\"Pita or wrap
             bread\",\"Chopped or shredded vegetables\",\"Pickles\",\"Assorted condiments\"]}
         </item>
-        <item>{\"name\":{\"mainName\":\"Vada Pav\",\"alsoKnownAs\":[\"Bombay Burger\",\"Vada
-            Pao\",\"Wada Pav\",\"Wada Pao\",\"Pao Vada\",\"Pav Vada\",\"Pao Wada\",\"Pav
-            Wada\"]},\"placeOfOrigin\":\"India\",\"description\":\"Vada Pav is a vegetarian fast
+        <item>{\"name\":{\"mainName\":\"Vada Pav\",\"alsoKnownAs\":[\"Bombay_Burger\",\"Vada_Pao\",\"Wada_Pav\",\"Wada_Pao\",\"Pao_Vada\",\"Pav_Vada\",\"Pao_Wada\",\"Pav_Wada\"]},\"placeOfOrigin\":\"India\",\"description\":\"Vada Pav is a vegetarian fast
             food dish native to the Indian state of Maharashtra. The dish consists of a deep fried
             potato dumpling placed inside a bread bun (pav) sliced almost in half through the
             middle. It is generally accompanied with one or more chutneys and a green chilli pepper.
